2009-11-26  David Grundberg <individ@acc.umu.se>

	* linear-algebra/dot.m: Conjugate first argument.

2009-11-14  Jaroslav Hajek  <highegg@gmail.com>

	* linear-algebra/expm.m: Fix typo.

2009-11-22  Michael Goffioul <michael.goffioul@gmail.com>

	* plot/print.m: Properly set the default ghostscript_binary
	under Windows. Modify the search for the ghostscript binary
	so that it works for Win32, mingw, Cygwin, and Unix systems.

2009-11-08  Petr Mikulik <mikulik@physics.muni.cz>

	* plot/gnuplot_drawnow.m: Support gnuplot's dumb terminal.

2009-11-02  Stefan Hepp  <stefan@stefant.org>

	* plot/gnuplot_drawnow.m (gnuplot_default_term): Don't set term to
	x11 unless DISPLAY is set.

2009-11-11  John W. Eaton  <jwe@octave.org>

	* plot/stairs.m (__stairs__): Correct nargin check.  New demos.
	From Jakub Kasse <jakub.kasse@tul.cz>.

2009-09-01  Christophe Tournery  <christophe.tournery@illusonic.com>

	* audio/wavread.m: Rename data_size from obsolete ck_size.

2009-07-23  John W. Eaton  <jwe@octave.org>

	* plot/legend.m: Process arguments in order, child objects in
	reverse.  Remove special case for single label.  New demos.

	2009-09-18  Jaroslav Hajek  <highegg@gmail.com>

	Version 3.2.3 released.

2009-07-23  John W. Eaton  <jwe@octave.org>

	* image/imread.m: Fix test.

2009-06-23  Alexander Mamonov  <mamonov@gmail.com>

	* image/imread.m: New test.

2009-09-09  Tatsuro Matsuoka <tmacchant@yahoo.co.jp>

	* plot/gnuplot_drawnow.m: Avoid flickering windows by avoding
	'set multiplot' / 'unset multiplot' for gnuplot's windows and
	wxt terminals.

2009-09-08  John W. Eaton  <jwe@octave.org>

	* io/dlmwrite.m: Fix typo.

2009-09-05  John W. Eaton  <jwe@octave.org>

	* plot/hold.m: Correctly toggle hold state.  Set both figure and
	axes "nextplot" property when turning hold state on.
	* plot/ishold.m: Check figure and axes nextplot properties.
	Accept axes or figure handle argument.

2009-08-17  Jaroslav Hajek  <highegg@gmail.com>
